<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#aff639cd">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/insertEquation"
                    android:id="@+id/textViewHeader"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/equation"
                    android:id="@+id/textViewEquation"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/parameterA"
                                android:id="@+id/textViewA"
                                android:layout_weight="1" />

                            <EditText
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/editTextA"
                                android:layout_weight="0.2"
                                android:numeric="signed|decimal"
                                android:hint="0" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/parameterB"
                                android:id="@+id/textViewB"
                                android:layout_weight="1" />

                            <EditText
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/editTextB"
                                android:layout_weight="0.2"
                                android:numeric="signed|decimal"
                                android:hint="0" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" >

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/parameterC"
                                android:id="@+id/textViewC"
                                android:layout_weight="1" />

                            <EditText
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/editTextC"
                                android:layout_weight="0.2"
                                android:numeric="signed|decimal"
                                android:hint="0" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top|center">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/compute"
                            android:id="@+id/buttonCompute"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/plot"
                            android:id="@+id/buttonDraw"
                            android:layout_gravity="center_horizontal" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/textViewResults"
                            android:layout_below="@+id/buttonCompute"
                            android:layout_toRightOf="@+id/buttonCompute"
                            android:layout_toEndOf="@+id/buttonCompute" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
